<resources>
    <string name="app_name">AlsHelper</string>

    <string name="sensor_choose">Choose the suitable Sensor\n From The list below:</string>

    <string name="sensor_blank">Choose your sensor!</string>
    <string name="sensor_joystick">Joystick</string>
    <string name="sensor_potentiometer">Potentiometer</string>
    <string name="sensor_button">Button</string>
    <string name="sensor_name_magnet">Magnet</string>
    <string name="insert_name">Patient name:</string>

    <string name="chosen_action_for_arduino">Chosen_action_for_arduino</string>

    <string name="action_blank">Choose action here!</string>
    <string name="action_light_on">Turn light on</string>
    <string name="action_light_off">Turn light off</string>
    <string name="action_ac_on">Turn Air Condition On</string>
    <string name="action_ac_off">Turn Air Condition Off</string>
    <string name="action_ring_bell">ringBell</string>
    <string name="action_dial_number">dial</string>
    <string name="action_7">a7</string>

    <string name="actionCode_blank">//</string>
    <string name="actionCode_light_on">//lightOn();</string>
    <string name="actionCode_light_off">//lightOff();</string>
    <string name="actionCode_ac_on">turnAC(1);</string>
    <string name="actionCode_ac_off">turnAC(0);</string>
    <string name="actionCode_ring_bell">//ringBell();</string>
    <string name="actionCode_dial_number">//dial();</string>
    <string name="actionCode_7">//a7();</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!--Settings Strings:-->

    <!-- user data  -->
    <string name="user_data">User Data</string>
    <string name="user_email">Email</string>
    <string name="user_name">Your name</string>

    <!-- Bluetooth Preferences -->
    <string name="bluetooth">Bluetooth</string>
    <string name="keep_old_bt_device">Keep last bluetooth device</string>

    <!-- Debugging Mode -->
    <string name="debugging_mode">Debugging mode</string>
    <string name="debug_text_size">Choose text size for the terminal</string>
    <string name="show_debug_options">Show Debugging options</string>

</resources>
