<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory app:title="@string/user_data">

        <EditTextPreference
            app:key="name"
            app:title="@string/user_name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="email"
            app:title="@string/user_email"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/bluetooth">

        <SwitchPreferenceCompat
            app:key="bluetooth"
            app:enabled="false"
            app:title="@string/keep_old_bt_device" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/debugging_mode">

        <SwitchPreferenceCompat
            app:key="debug_mode"
            app:defaultValue="true"
            app:enabled="true"
            app:title="@string/show_debug_options" />

        <ListPreference
            app:defaultValue="@array/debug_font_size_values"
            app:entries="@array/debug_font_size"
            app:entryValues="@array/debug_font_size_values"
            app:key="text_size"
            app:title="@string/debug_text_size"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>